Bug 1916391 - [devtools] Display Netmonitor Statistics charts legend in High Contrast Mode. r=devtools-reviewers,bomsy.
The colors that are defined for the charts are specified in High Contrast Mode,
so we can display them in the legend just fine.
This requires making the legend element their own element, as we don't want to
opt out of forced colors for the cell content.

Differential Revision: https://phabricator.services.mozilla.com/D226788

--- a/devtools/client/netmonitor/src/assets/styles/StatisticsPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/StatisticsPanel.css
@@ -70,8 +70,13 @@
   margin-inline-end: 3vw;
 }
 
-tr[data-statistic-name] td:first-of-type {
+/* Use a pseudo element for the "legend" so we can adapt to High Contrast Mode without
+   impacting the cell content */
+tr[data-statistic-name] td:first-of-type::before {
+  content: "";
   border-inline-start: 15px solid var(--stat-color);
+  forced-color-adjust: none;
+  margin-inline-end: 5px;
 }
 
 path[data-statistic-name] {
